--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+@plugin 'tailwind-scrollbar';
 
 @theme inline {
   --color-background: var(--background);
